@@ -1,6 +1,6 @@
 $Id:$
 
-%%_PROJECT_NAME_%% : A simple dummy application of Kahua
+%%_PROJECT_NAME_%% : A simple skelton of application for Kahua.
 
 [Requirements]
 
