@@ -1,8 +1,0 @@
-#!/bin/sh
-if [ -n "$1" ]; then
-    PORT=$1
-else
-    PORT=8080
-fi
-
-(kahua-spvr -c ###%%_PROJECT_NAME_UP_%%_INPLACE###/%%_PROJECT_NAME_%%.conf -H $PORT -l - &)
