@@ -1,10 +1,0 @@
-;; -*- coding: utf-8; mode: scheme -*-
-;;
-;; $Id:$
-
-(make <kahua-config>
-  :sockbase             "unix:###%%_PROJECT_NAME_UP_%%_INPLACE_SOCKETBASE###"
-  :working-directory    "###%%_PROJECT_NAME_UP_%%_INPLACE_WORKING###"
-  :static-document-path "###%%_PROJECT_NAME_UP_%%_INPLACE_DOCPATH###"
-  :static-document-url  "/doc"
-  )
