@@ -1,10 +1,9 @@
 ;;-*- coding: utf-8; mode: kahua -*-
 ;; %%_PROJECT_NAME_%% version
 ;;
-;;  Copyright (c) 2005 KahuaOrg
 ;;  See COPYING for terms and conditions of using this software
 ;;
 ;; $Id:$
 
 ;;---------------------------------------------------------
-(define *%%_PROJECT_NAME_%%-version* "###%%_PROJECT_NAME_UP_%%_VERSION###")
+(define *%%_PROJECT_NAME_%%-version* "##PROJECT_VERSION##")
